--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "functional": "c",
+        "limits": "c"
     }
 }
