--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "string": "c",
         "string_view": "c",
         "functional": "c",
-        "limits": "c"
+        "limits": "c",
+        "algorithm": "c"
     }
 }
